--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,18 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Sarabun:wght@300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Sarabun:wght@300;400;500;600;700&display=swap");
 
-html, body {
-    font-family: 'Sarabun', sans-serif;
+html,
+body {
+  font-family: "Sarabun", sans-serif;
 }
 
 .v-application {
-    font-family: 'Sarabun', sans-serif;
+  font-family: "Sarabun", sans-serif;
 
-    .v-application--wrap {
-        font-family: 'Sarabun', sans-serif;
-        background-color: #658182;
-    }
+  .v-application--wrap {
+    font-family: "Sarabun", sans-serif;
+    background-color: #658182;
+  }
 }
 
 .ig-color-white {
-    color: #cccccc;
+  color: #cccccc;
 }
